# ADAS-OBJECT-DETECTION

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-apple.txt  requirements-cuda.txt  requirements-gpu.txt  requirements-mac.txt  requirements.txt
api/: __init__.py  main.py
configs/: dataset.yaml  quantization.yaml  training.yaml
data_pipeline/: __init__.py  convert_annotations.py  data_augmentation.py  download_bdd100k.py
demo/: app.py  edge_demo.py  requirements.txt
demo/examples/: driving_001.txt  driving_002.txt  driving_003.txt
docs/plans/: 2025-12-11-adas-object-detection-design.md
inference/: __init__.py  detector.py
notebooks/: 01_train_on_colab.ipynb
quantization/: __init__.py  benchmark.py  coreml_convert.py  onnx_quantize.py  tensorrt_quantize.py
scripts/: download_sample_data.py  setup_data.sh  setup_local_data.py
tests/: __init__.py  conftest.py  test_data_pipeline.py  test_inference.py
training/: __init__.py  benchmark.py  train.py
