[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adas-object-detection"
version = "1.0.0"
description = "Real-time object detection pipeline for ADAS applications"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sai Pranav Krovvidi", email = "your.email@example.com"}
]
requires-python = ">=3.10"
keywords = [
    "computer-vision",
    "object-detection",
    "yolov8",
    "adas",
    "autonomous-driving",
    "deep-learning",
    "pytorch",
    "onnx",
    "quantization"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "ultralytics>=8.0.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.16.0",
    "opencv-python>=4.8.0",
    "albumentations>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.65.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.103.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
]
demo = [
    "gradio>=4.0.0",
    "plotly>=5.17.0",
    "matplotlib>=3.7.0",
]
mlops = [
    "wandb>=0.15.0",
    "mlflow>=2.8.0",
]
apple = [
    "coremltools>=7.0.0",
]
cuda = [
    "onnxruntime-gpu>=1.16.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
]
all = [
    "adas-object-detection[api,demo,mlops,dev]",
]

[project.urls]
Homepage = "https://github.com/Pranav1011/ADAS-OBJECT-DETECTION"
Repository = "https://github.com/Pranav1011/ADAS-OBJECT-DETECTION"
Documentation = "https://github.com/Pranav1011/ADAS-OBJECT-DETECTION#readme"

[project.scripts]
adas-train = "training.train:main"
adas-detect = "inference.detector:main"
adas-benchmark = "quantization.benchmark:main"
adas-api = "api.main:start_server"

[tool.setuptools.packages.find]
include = ["data_pipeline*", "training*", "quantization*", "inference*", "api*", "demo*"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["data_pipeline", "training", "quantization", "inference", "api", "demo"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["data_pipeline", "training", "quantization", "inference", "api"]
omit = ["tests/*", "demo/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
